[gd_scene load_steps=20 format=3 uid="uid://dq6tvhqcy2aps"]

[ext_resource type="Script" uid="uid://mp64lt5trfar" path="res://addons/cogito/EasyMenus/Scripts/main_menu_controller.gd" id="1_lbw7r"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/mouseclick1.ogg" id="3_cfl52"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/click1.ogg" id="4_mhv4c"]
[ext_resource type="Script" uid="uid://bg6tmerhavxb3" path="res://addons/cogito/Theme/CogitoUiButton.gd" id="4_ufukr"]
[ext_resource type="FontFile" uid="uid://db0ufixg7qc4q" path="res://Assets/Fonts/Shrikhand-Regular.ttf" id="5_2q4pv"]
[ext_resource type="FontFile" uid="uid://behx5duaxseqq" path="res://docs/_build/html/_static/css/fonts/Roboto-Slab-Bold.woff2" id="6_1fm4n"]
[ext_resource type="Texture2D" uid="uid://xvn0elatew0k" path="res://addons/cogito/Assets/Graphics/Trash.png" id="6_l0dou"]
[ext_resource type="PackedScene" uid="uid://k0i6k7mcajfm" path="res://addons/cogito/EasyMenus/Components/SaveSlotButton.tscn" id="6_s811w"]
[ext_resource type="Theme" uid="uid://flnw8od74dnb" path="res://Assets/Themes/Wubbees.tres" id="7_2q4pv"]
[ext_resource type="PackedScene" uid="uid://bly6wti1q8bsu" path="res://addons/cogito/EasyMenus/Scenes/OptionsTabMenu.tscn" id="8_ig87r"]
[ext_resource type="PackedScene" uid="uid://b5t6xjn4jdtj1" path="res://Assets/Scenes/wubbys_room.tscn" id="12_72g5g"]
[ext_resource type="Script" uid="uid://c024i2xgr6uib" path="res://addons/cogito/EasyMenus/Scripts/main_menu_saveslot_manager.gd" id="13_4uenq"]

[sub_resource type="Gradient" id="Gradient_72g5g"]
interpolation_mode = 1
offsets = PackedFloat32Array(0, 0.546219)
colors = PackedColorArray(0.784314, 0.294118, 0.211765, 1, 0.972549, 0.945098, 0.905882, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2q4pv"]
gradient = SubResource("Gradient_72g5g")
width = 500
fill_from = Vector2(0.986987, 0)
repeat = 1

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1fm4n"]
content_margin_top = 200.0
texture = SubResource("GradientTexture2D_2q4pv")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1fm4n"]
content_margin_left = 2048.0
content_margin_top = 10.0
content_margin_right = 2048.0
content_margin_bottom = 10.0
bg_color = Color(0.211765, 0.14902, 0.0627451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n66hi"]

[sub_resource type="Animation" id="Animation_72g5g"]
resource_name = "menu_style"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2q4pv"]
_data = {
&"menu_style": SubResource("Animation_72g5g")
}

[node name="MainMenu" type="Control" node_paths=PackedStringArray("first_focus_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_2q4pv")
script = ExtResource("1_lbw7r")
first_focus_button = NodePath("ContentMain/GameMenu/VBoxContainer/HBoxContainerA/SaveSlot_A")
menu_themes = Array[Theme]([ExtResource("7_2q4pv")])
sound_hover = ExtResource("3_cfl52")
sound_click = ExtResource("4_mhv4c")

[node name="ContentMain" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = -1780.0
offset_top = -120.0
offset_right = 2480.0
offset_bottom = 690.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TitleLabel" type="Label" parent="ContentMain"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.956863, 0.870588, 0.654902, 1)
theme_override_colors/font_shadow_color = Color(0.368627, 0.203922, 0.109804, 1)
theme_override_colors/font_outline_color = Color(0.368627, 0.203922, 0.109804, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 12
theme_override_constants/shadow_outline_size = 8
theme_override_fonts/font = ExtResource("5_2q4pv")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_1fm4n")
text = "Wubby's"
horizontal_alignment = 1

[node name="TitleLabel2" type="Label" parent="ContentMain"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0.784314, 0.298039, 0.211765, 1)
theme_override_fonts/font = ExtResource("6_1fm4n")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_1fm4n")
text = "Wha happun?"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ContentMain"]
visible = false
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GameMenu" type="MarginContainer" parent="ContentMain"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMain/GameMenu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainerA" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_2q4pv")

[node name="SaveSlot_A" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerA" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_2q4pv")
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "A"

[node name="DeleteSlot_A" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerA"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="HBoxContainerB" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SaveSlot_B" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerB" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "B"

[node name="DeleteSlot_B" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainerB"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMain/GameMenu/VBoxContainer"]
visible = false
layout_mode = 2

[node name="SaveSlot_C" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("save_slot_manager_node") instance=ExtResource("6_s811w")]
unique_name_in_owner = true
layout_mode = 2
save_slot_manager_node = NodePath("../../../../../MainMenu_SaveSlotManager")
manual_save_slot_name = "C"

[node name="DeleteSlot_C" type="Button" parent="ContentMain/GameMenu/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
icon = ExtResource("6_l0dou")
icon_alignment = 1
expand_icon = true
script = ExtResource("4_ufukr")

[node name="Separator_PanelContainer2" type="PanelContainer" parent="ContentMain/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_n66hi")

[node name="OptionsButton" type="Button" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("7_2q4pv")
theme_override_font_sizes/font_size = 30
text = "Options"
script = ExtResource("4_ufukr")

[node name="QuitButton" type="Button" parent="ContentMain/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("7_2q4pv")
theme_override_font_sizes/font_size = 30
text = "Quit"
script = ExtResource("4_ufukr")

[node name="OptionsTabMenu" parent="ContentMain" instance=ExtResource("8_ig87r")]
visible = false
layout_mode = 2

[node name="MainMenu_SaveSlotManager" type="Control" parent="."]
layout_mode = 2
anchors_preset = 0
offset_left = 100.0
offset_top = 603.0
offset_right = 600.0
offset_bottom = 603.0
script = ExtResource("13_4uenq")
new_game_start_scene = ExtResource("12_72g5g")
new_game_world_dict = {
"lab_power": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_2q4pv")
}

[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainerA/DeleteSlot_A" to="ContentMain/GameMenu/VBoxContainer/HBoxContainerA/SaveSlot_A" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainerB/DeleteSlot_B" to="ContentMain/GameMenu/VBoxContainer/HBoxContainerB/SaveSlot_B" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/HBoxContainer/DeleteSlot_C" to="ContentMain/GameMenu/VBoxContainer/HBoxContainer/SaveSlot_C" method="_on_delete_slot_pressed"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/OptionsButton" to="." method="open_options_menu"]
[connection signal="pressed" from="ContentMain/GameMenu/VBoxContainer/QuitButton" to="." method="quit"]
